test/fail/Tabs.agda
module Tabs where

-- Tabs are not treated as white space.

tab:	 : Setâ‚
tab:	 = Set
